@@ -70,6 +70,7 @@ committers_unable_to_review = [
     Committer("Brian Weinstein", "bweinstein@apple.com"),
     Committer("Cameron McCormack", "cam@webkit.org"),
     Committer("Chris Fleizach", "cfleizach@apple.com"),
+    Committer("Chris Jerdonek", "cjerdonek@webkit.org"),
     Committer("Chris Marrin", "cmarrin@apple.com"),
     Committer("Chris Petersen", "cpetersen@apple.com"),
     Committer("Christian Dywan", ["christian@twotoasts.de", "christian@webkit.org"]),
@@ -132,12 +133,14 @@ committers_unable_to_review = [
     Committer("Tony Chang", "tony@chromium.org"),
     Committer("Trey Matteson", "trey@usa.net"),
     Committer("Tristan O'Tierney", ["tristan@otierney.net", "tristan@apple.com"]),
+    Committer("Victor Wong", "victorw@chromium.org"),
     Committer("William Siegrist", "wsiegrist@apple.com"),
     Committer("Yael Aharon", "yael.aharon@nokia.com"),
     Committer("Yaar Schnitman", ["yaar@chromium.org", "yaar@google.com"]),
     Committer("Yong Li", ["yong.li@torchmobile.com", "yong.li.webkit@gmail.com"]),
     Committer("Yongjun Zhang", "yongjun.zhang@nokia.com"),
     Committer("Yury Semikhatsky", "yurys@chromium.org"),
+    Committer("Zoltan Herczeg", "zherczeg@webkit.org"),
     Committer("Zoltan Horvath", "zoltan@webkit.org"),
 ]
 
@@ -198,7 +201,7 @@ reviewers_list = [
     Reviewer("Sam Weinig", ["sam@webkit.org", "weinig@apple.com"]),
     Reviewer("Shinichiro Hamaji", "hamaji@chromium.org"),
     Reviewer("Simon Fraser", "simon.fraser@apple.com"),
-    Reviewer("Simon Hausmann", ["hausmann@webkit.org", "hausmann@kde.org"]),
+    Reviewer("Simon Hausmann", ["hausmann@webkit.org", "hausmann@kde.org", "simon.hausmann@nokia.com"]),
     Reviewer("Stephanie Lewis", "slewis@apple.com"),
     Reviewer("Steve Falkenburg", "sfalken@apple.com"),
     Reviewer("Tim Omernick", "timo@apple.com"),
